success, but still some bug bug1: reading time autimatically, not intended bug2: color changed for each 1 (0.5?) sec todo: color icon at each avator

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     {
       "js": ["jquery-3.3.1.min.js","rewrite_scripts/main.js"],
     "matches": ["https://*.twitter.com/*"],
-    "run_at": "document_start"
+    "run_at": "document_end"
   }
 ]
 
